k8s/apps/dashy/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-headless
  namespace: dashy
  labels:
    app: dashy
spec:
  clusterIP: None
  selector:
    app: dashy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
