k8s/apps/dashy/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-loadbalancer
  namespace: dashy
  labels:
    app: dashy
spec:
  type: LoadBalancer
  selector:
    app: dashy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
