k8s/apps/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
