k8s/apps/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: dashy
spec:
  ingressClassName: traefik
  rules:
    - host: dashy.andrzejsidor.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 80
